@@ -93,6 +93,12 @@ final public class RAMDirectory extends Directory {
     return file.lastModified;
   }
 
+  /** Set the modified time of an existing file to now. */
+  public void touchFile(String name) throws IOException, SecurityException {
+    RAMFile file = (RAMFile)files.get(name);
+    file.lastModified = System.currentTimeMillis();
+  }
+
   /** Returns the length in bytes of a file in the directory. */
   public final long fileLength(String name) {
     RAMFile file = (RAMFile)files.get(name);
